# trading-analysis

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
configs/: mvp.yaml  sectors.yaml  smoke.yaml  sp500.yaml  study.yaml  universe_leveraged.yaml  universe_sectors.yaml  universe_sp500.yaml  universe_study.yaml  universe_survivorship.json  universe_us_top50.yaml
data/: _av_earnings_state.json  _finmind_tw_div_state.json  _finmind_tw_state.json  _papers_seen.txt  _serenity_seen.txt  _tiingo_backfill_state.json
docs/: 00-executive-summary.md  01-implementation-plan.md  02-data-flow-and-ml.md  03-quant-research-agenda.md  04-portfolio-review.md  05-backtest-postmortem.md  06-factor-search-frontier.md  07-industry-strategies.md  08-recommended-strategy.md  09-methodology-and-factor-gate.md  10-alt-data-ingestion.md  11-data-dimensions.md  12-quant-methods-survey.md  13-strategy-catalog.md  14-horizon-framework.md  15-strategy-catalog-100.md  16-serenity-analysis.md  17-fabric-acceptance.md  18-strategy-registry.md  19-mechanism-taxonomy.md  20-theory-review.md  21-paper-to-tr-pipeline.md  22-paper-ledger-and-plan.md  23-creator-mechanisms.md  24-data-gaps-and-sources.md  25-next-phase-dialectic-and-plan.md  26-allocation-lab.md  27-open-items.md  28-picking-directions-and-vix.md  alt-data-and-content-expansion.md  architecture-decision-multirepo.md  architecture-integration.md  data-and-backtest-rigor.md  design-brief.md  extraction-backlog.md  ingestion-pipeline.md  repo-evaluation.md  research-inventory.md  sentiment-and-market-analysis.md  tech-selection-scraping-tools.md  (+1 more)
scripts/: add_quality_sleeve.py  allocation_lab.py  backtest_study.py  combo_vs_voo.py  core_business_factors.py  custom_universe_2025.py  custom_universe_leakcheck.py  custom_universe_variants.py  defensive_overlay.py  ensemble_mix.py  export_dashboard.py  factor_determination.py  factor_search.py  flagship_holdings.py  flagship_onepager.py  fundamental_factors.py  gate_3x_voo.py  highvol_leak_probe.py  highvol_leak_probe2.py  highvol_ruleset.py  horizon_slots.py  ingest_fundamentals.py  ingest_insider.py  insider_factor.py  (+27 more)
(+215 files in other folders)
