[project]
name = "trading-analysis"
version = "0.1.0"
description = "Modular stock trading strategy software with Kronos forecasting, multi-agent analysis, and backtesting"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "trading-analysis contributors" }]
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "pyyaml>=6.0",
    "loguru>=0.7",
    "typer>=0.12",
    "rich>=13.7",
    "duckdb>=1.0",
    "pyarrow>=16.0",
    "pandas>=2.2",
    "numpy>=1.26,<2.0",
    "yfinance>=0.2.40",
    "vectorbt>=0.26",
    "matplotlib>=3.8",
    "plotly>=5.20",
    "streamlit>=1.36",
    "apscheduler>=3.10",
    "mlflow>=2.13",
    "tenacity>=8.4",
    "scikit-learn>=1.4",
    "statsmodels>=0.14",
    "lightgbm>=4.3",
    "pandas-datareader>=0.10",
    "setuptools>=81.0.0",
]

[project.optional-dependencies]
kronos = [
    "torch>=2.3",
    "transformers>=4.40",
    "huggingface-hub>=0.23",
    "einops>=0.8",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
trading-analysis = "trading_analysis.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trading_analysis"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B", "SIM"]
# typer.Option(...) in argument defaults is the required Typer idiom, not a B008 bug.
"src/trading_analysis/cli.py" = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
files = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
markers = [
    "integration: integration tests (may need network or filesystem)",
    "slow: slow tests (model loading, full backtest)",
]

[dependency-groups]
dev = [
    "openpyxl>=3.1.5",
]
